--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,12 +1,30 @@
-body{
-    margin: 0;
-    padding: 0;
-    color: #484848;
-    font-size: 14px;
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-
+body {
+  margin: 0;
+  padding: 0;
+  color: #484848;
+  font-size: 14px;
+  font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
- .container {
-    max-width: 1000px;
-    margin: 30px auto;
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+div.container {
+  max-width: 1000px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 100%;
+
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-content: center; */
+  /* align-items: center; */
+
+  /* align-items: center; */
+  /* height: 100vh; */
+
+  /* height: 100vh; */
+  /* width: 100%; */
 }
