--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,32 +1,26 @@
-div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    text-align: center;
-}
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  background-color: white;
+  height: 70px;
+  width: 100%;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
-section.filters button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: none;
-    border-radius: 4px;
-    /* float: right; */
-    margin-right: 30px;
-    cursor: pointer;
-    transition: opacity 0.3s;
 
+section.filters button {
+  font-size: 18px;
+  background-color: #ff5a5f;
+  color: #ffffff;
+  height: 48px;
+  width: 20%;
+  /* float: right; */
+  border-radius: 4px;
+  margin-right: 30px;
+  opacity: 1;
+  transition: opacity 0.3s;
 }
-.search:hover {
-    opacity: 0.9;
+.filters button:hover {
+  opacity: 0.9;
 }
