--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,63 +1,66 @@
-div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    text-align: center;
-}
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  background-color: white;
+  height: 70px;
+  width: 100%;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  /* flex: 1; */
 }
+
 section.filters button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: none;
-    border-radius: 4px;
-    /* float: right; */
-    margin-right: 30px;
-    cursor: pointer;
-    transition: opacity 0.3s;
+  font-size: 18px;
+  background-color: #ff5a5f;
+  color: #ffffff;
+  height: 48px;
+  width: 20%;
+  /* float: right; */
+  border-radius: 4px;
+  margin-right: 30px;
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+.filters button:hover {
+  opacity: 0.9;
+}
+.locations .amenities {
+  width: 25%;
+  height: 100%;
+}
+.locations {
+  border-right: 1px solid #dddddd;
+  width: 25%;
+  padding-left: 30px;
+  height: 100%;
+}
 
+/* .filter-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1;
+} */
+.locations h4 .amenities h4 {
+  font-weight: 400;
+  font-size: 14px;
+  text-align: left;
+  /* margin-left: 30px; */
 }
-.search:hover {
-    opacity: 0.9;
+.locations h3 .amenities h3 {
+  font-weight: 600;
+  text-align: left;
+  /* margin-left: 30px; */
 }
-.locations, .amenities {
-    height: 100%;
-    width: 75%;
-     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    float: left;
-    /* justify-content: center; */
+.search-contents {
+  display: flex;
+  justify-content: flex-start;
+  /* align-items: center; */
+  gap: 30px;
+  height: 100%;
 
-    
+  /* align-items: center; */
+  flex: 1;
 }
-.locations h3, .amenities h3 {
-    font-weight: 600;
-    font-size: 16px;
-    margin-bottom: 0px;
-    margin-top: 20px;
-    margin-left: 30px;
-    text-align: left; 
-}
-.locations h4, .amenities h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 30px;
-    text-align: left;
-
-}
- .locations {
-    border-right: 1px solid #DDDDDD;
-} 
